kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-sentinel
  labels:
    app.kubernetes.io/name: cluster-sentinel
