kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cluster-sentinel
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cluster-sentinel
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
